all project week 06 tasks in progress version
